# dct-python

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
dct/: __init__.py  api.py  codelets.py  mind.py  parser.py  server.py  utils.py
tests/: test_codelets.py  test_core_memory.py  test_mind.py  test_parser.py  test_server.py
